9656-chosen language on the header fully visible fixed

--- a/ui/src/app/app.component.less
+++ b/ui/src/app/app.component.less
@@ -155,7 +155,7 @@ ul {
     }
 }
 .matSelect{
-    max-width: 60px;
+    max-width: 100px;
     margin-top: 4px;
     margin-left: 10px;
     font-size: 14px;
